# Copyright (c) 2004-2007. The SimGrid team. All right reserved.

# This file is part of the SimGrid project. This is free software:
# You can redistribute and/or modify it under the terms of the
# GNU LGPL (v2.1) licence.


SUBDIRS= ping rpc spawn timer chrono mutual_exclusion/simple_token \
  mmrpc all2all pmm synchro properties replay
# p2p

include $(top_srcdir)/acmacro/dist-files.mk
